src/test/ui/borrowck/borrowck-mutate-in-guard.nll.stderr
error[E0302]: cannot assign in a pattern guard
  --> $DIR/borrowck-mutate-in-guard.rs:10:25
   |
LL |         Enum::A(_) if { x = Enum::B(false); false } => 1,
   |                         ^^^^^^^^^^^^^^^^^^ assignment in pattern guard

error[E0301]: cannot mutably borrow in a pattern guard
  --> $DIR/borrowck-mutate-in-guard.rs:12:38
   |
LL |         Enum::A(_) if { let y = &mut x; *y = Enum::B(false); false } => 1,
   |                                      ^ borrowed mutably in pattern guard
   |
   = help: add #![feature(bind_by_move_pattern_guards)] to the crate attributes to enable

error[E0302]: cannot assign in a pattern guard
  --> $DIR/borrowck-mutate-in-guard.rs:12:41
   |
LL |         Enum::A(_) if { let y = &mut x; *y = Enum::B(false); false } => 1,
   |                                         ^^^^^^^^^^^^^^^^^^^ assignment in pattern guard

error: aborting due to 3 previous errors

Some errors occurred: E0301, E0302.
For more information about an error, try `rustc --explain E0301`.
